# subst

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  branch_inv.sbst  sbst.vim
include/: Capstone.hpp  Hex.hpp  Mnemonics.hpp  Parse.hpp  Patch.hpp  Search.hpp  Types.hpp
src/: capstone.cpp  hex.cpp  main.cpp  parse.cpp  patch.cpp  search.cpp
tests/: branch_inv.asm  branch_inv.sbst  comparison.c  comparison.sbst  nop.asm  nop.sbst  pass_check.c  pass_check.sbst  pass_check.sbt  pass_check.subst  return.asm  return.sbst  test.sh
